--- a/Proyecto_Viajes/src/main/resources/static/css/index.css
+++ b/Proyecto_Viajes/src/main/resources/static/css/index.css
@@ -19,12 +19,12 @@ th{
 		display:flex;
 		justify-content:center;
 }
-form{
+.form1{
 	border:4px solid black;
 	padding:10px 15px 10px 15px;
 
 }
-form>div{
+.form1>div{
 	display:flex;
 	flex-direction: column;
 	margin-top:5px;
@@ -34,7 +34,7 @@ form>div{
 	 font: 1em sans-serif;
   	font-size: small;
 }
-button{
+.button1{
 	width:50px;
 	margin-left: 190px;
 	border:2px solid black;
@@ -42,3 +42,5 @@ button{
 	color:white;
 	cursor:pointer;
 }
+
+
