--- a/Proyecto_Viajes/src/main/resources/static/css/pagina.css
+++ b/Proyecto_Viajes/src/main/resources/static/css/pagina.css
@@ -1,21 +1,42 @@
 @charset "ISO-8859-1";
 h1{
-	color:green;
+	text-align: center;
 }
-.titulo{
+.lista{
 	display:flex;
-	justify-content:space-evenly;
+	justify-content:center;
 }
+table{
+	border: 4px solid black;
+	border-collapse:collapse;
+}
+th{
+	border-right: 3px solid black;
+	padding: 5px;
+	
+}
+.actions{
+	display:flex;
+	border-right:none;
+}
+.button2{
+	background-color:transparent;
+	border:none;
+	cursor:pointer;
+	color:red;
+	text-decoration: underline red;
+}
+
 .registro{
 		display:flex;
 		justify-content:center;
 }
-.form2{
+.form1{
 	border:4px solid black;
 	padding:10px 15px 10px 15px;
 
 }
-.form2>div{
+.form1>div{
 	display:flex;
 	flex-direction: column;
 	margin-top:5px;
@@ -25,7 +46,7 @@ h1{
 	 font: 1em sans-serif;
   	font-size: small;
 }
-.button2{
+.button1{
 	width:50px;
 	margin-left: 190px;
 	border:2px solid black;
@@ -33,14 +54,7 @@ h1{
 	color:white;
 	cursor:pointer;
 }
-.button1{
-	background-color:transparent;
-	border:none;
-	cursor:pointer;
-	margin-top:30px;
-	color: blue;
-	text-decoration: underline blue;
-}
 .error{
 	color:red;
 }
+
